--- a/.htaccess
+++ b/.htaccess
@@ -1,49 +1,50 @@
 <IfModule mod_rewrite.c>
-RewriteEngine On
-RewriteCond %{HTTPS} !=on
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+  # Force HTTPS (Required for Current Location API)
+  RewriteEngine On
+  RewriteCond %{HTTPS} !=on
+  RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </IfModule>
-
 <IfModule mod_filter.c>
-    AddOutputFilterByType DEFLATE "application/atom+xml" \
-                                  "application/javascript" \
-                                  "application/json" \
-                                  "application/ld+json" \
-                                  "application/manifest+json" \
-                                  "application/rdf+xml" \
-                                  "application/rss+xml" \
-                                  "application/schema+json" \
-                                  "application/vnd.geo+json" \
-                                  "application/vnd.ms-fontobject" \
-                                  "application/x-font-ttf" \
-                                  "application/x-javascript" \
-                                  "application/x-web-app-manifest+json" \
-                                  "application/xhtml+xml" \
-                                  "application/xml" \
-                                  "font/eot" \
-                                  "font/opentype" \
-                                  "image/bmp" \
-                                  "image/svg+xml" \
-                                  "image/vnd.microsoft.icon" \
-                                  "image/x-icon" \
-                                  "text/cache-manifest" \
-                                  "text/css" \
-                                  "text/html" \
-                                  "text/javascript" \
-                                  "text/plain" \
-                                  "text/vcard" \
-                                  "text/vnd.rim.location.xloc" \
-                                  "text/vtt" \
-                                  "text/x-component" \
-                                  "text/x-cross-domain-policy" \
-                                  "text/xml"
-
+  # Enable gzip
+  AddOutputFilterByType DEFLATE "application/atom+xml" \
+                                "application/javascript" \
+                                "application/json" \
+                                "application/ld+json" \
+                                "application/manifest+json" \
+                                "application/rdf+xml" \
+                                "application/rss+xml" \
+                                "application/schema+json" \
+                                "application/vnd.geo+json" \
+                                "application/vnd.ms-fontobject" \
+                                "application/x-font-ttf" \
+                                "application/x-javascript" \
+                                "application/x-web-app-manifest+json" \
+                                "application/xhtml+xml" \
+                                "application/xml" \
+                                "font/eot" \
+                                "font/opentype" \
+                                "image/bmp" \
+                                "image/svg+xml" \
+                                "image/vnd.microsoft.icon" \
+                                "image/x-icon" \
+                                "text/cache-manifest" \
+                                "text/css" \
+                                "text/html" \
+                                "text/javascript" \
+                                "text/plain" \
+                                "text/vcard" \
+                                "text/vnd.rim.location.xloc" \
+                                "text/vtt" \
+                                "text/x-component" \
+                                "text/x-cross-domain-policy" \
+                                "text/xml"
 </IfModule>
-
 <IfModule mod_expires.c>
+  # Enable Cacheing
   ExpiresActive On
-  ExpiresByType image/svg+xml "access plus 1 year"
-  <filesMatch ".(css|js)$">
-  Header set Cache-Control "access plus 1 week"
-  </filesMatch>
+  ExpiresByType image/svg+xml "access plus 1 month"
+  ExpiresByType text/css "access plus 1 week"
+  ExpiresByType image/png "access plus 1 month"
+  ExpiresByType application/x-javascript "access plus 1 week"
+  ExpiresByType application/javascript "access plus 1 week"
 </IfModule>
